# sstring

./: .gitignore  CMakeLists.txt  main.cpp
include/: sstring.h
